config fixes